--- a/TasksApi/appsettings.json
+++ b/TasksApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "TasksDbConnectionString": "Server=Home\\SQLEXPRESS;Database=TasksDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "TasksDbConnectionString": "Server=localhost;Database=TasksDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
