--- a/TasksApi/efpt.config.json
+++ b/TasksApi/efpt.config.json
@@ -26,7 +26,7 @@
          "ObjectType": 0
       }
    ],
-   "UiHint": "HOME\\SQLEXPRESS.TasksDb",
+   "UiHint": "localhost.TasksDb",
    "UseBoolPropertiesWithoutDefaultSql": false,
    "UseDatabaseNames": false,
    "UseDbContextSplitting": false,
